# smart-center

./: .codex_deploy_ts.txt  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  BRAND_AND_CONNECTION_TYPE.md  CHANGES.md  COLLABORATION.md  CONFIG_UI_GUIDE.md  DGH-608_8路时序器对接协议.md  DS-608_时序电源对接文档.txt  FEISHU_INTEGRATION.md  FORMAT_SELECTION_GUIDE.md  GIT_WORKFLOW.md  HANDOVER_12700K.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_AUDIT_20260502.md  PROJECTOR_INTEGRATION_GUIDE.md  PROJECTOR_QUICKSTART.md  PROJECTOR_STATUS_DISPLAY.md  PROJECTOR_STATUS_SUMMARY.md  PROJECTOR_UPDATE_2024.md  QUICK_CONFIG_GUIDE.md  README.md  SCREEN_CONFIG.md  SCREEN_CONTROL_GUIDE.md  SCREEN_QUICK_START.md  SMILE_EK_PROTOCOL_UPDATE.md  THREE_TIER_REFACTOR_SUMMARY.md  THREE_TIER_STRUCTURE.md  UPDATE_SUMMARY.md  __remote_meters.json  _agent_from_server.ps1  _agent_test.ps1  _downloaded_agent_bootstrap.ps1  _downloaded_agent_worker.ps1  _generated_agent_bootstrap.ps1  _generated_agent_launcher.ps1  _generated_agent_worker.ps1  (+74 more)
.baseline_reports/: baseline-file-list-depth2.txt  baseline-file-list.txt  baseline-summary.txt  baseline-top-level.txt  cleanup-summary.txt  removed-all.txt  removed-equals-file.txt  removed-pyc-files.txt  removed-pycache-dirs.txt  removed-runtime-dirs.txt  removed-runtime-state-files.txt  removed-top-temp-files.txt  removed-zip-files.txt
.worktasks/: README.md  TASK_TEMPLATE.md
agent/: linux_agent.py
api/: __init__.py  apple_audio.py  auth_api.py  automation.py  control_center.py  current_collector.py  dashboard.py  door.py  driver_hub.py  env.py  (+20 more)
(+682 files in other folders)
